<resources>
    <string name="app_name">CalorieMaster_android</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_recipe">Recipe</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enterid">Enter an e-mail address or username</string>
    <string name="password">Password</string>
    <string name="email_signup">Sign up with email</string>
    <string name="signin">Sign in</string>
    <string name="give_info">Create your own account for Calorie Master!</string>
    <string name="signout">Sign Out</string>
    <string name="profile">Profile Fragment!</string>
</resources>